# rice-cli

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
